<resources>
    <string name="app_name">Prishtina Explorer</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">Maps</string>
    <string name="explore_with_google_maps">Explore with google maps</string>
    <string name="what_visitors_are_saying">What visitors are saying</string>
    <string name="review_summary">Review Summary</string>
    <string name="post">Post</string>
    <string name="leave_a_review">Leave a review...</string>
    <string name="textview">TextView</string>
    <string name="read">read</string>
    <string name="username">Username</string>
    <string name="live_chat_with_the_locals">Live chat with the locals</string>
    <string name="germia">Germia</string>
    <string name="live_chat">Live chat</string>
    <string name="welcome_to_prishtina">Welcome to Prishtina</string>
    <string name="newborn">NEWBORN</string>
    <string name="modern_sculpture_with_political_meaning">Modern sculpture with political meaning</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="the_newborn_monument_is_a_typographic_sculpture_and_tourist_attraction_in_pristina_kosovo_located_in_front_of_the_palace_of_youth_and_sports_the_monument_was_unveiled_on_17_february_2008_the_day_that_kosovo_formally_declared_its_independence_from_serbia_the_monument_consists_of_the_english_language_word_quot_newborn_quot_in_capital_block_letters_which_were_painted_bright_yellow_when_the_sculpture_was_first_revealed_the_monument_was_later_re_painted_with_the_flags_of_the_states_that_have_recognised_kosovo_at_the_unveiling_of_the_monument_it_was_announced_that_it_will_be_painted_differently_on_the_anniversary_of_kosovo_s_independence_movement_day_every_year_the_monument_attracted_the_attention_of_international_media_reporting_kosovo_s_movement_declaration_of_independence_and_it_was_featured_prominently_on_the_front_page_of_the_new_york_times">The Newborn Monument is a typographic sculpture and tourist attraction in Pristina, Kosovo. Located in front of the Palace of Youth and Sports, the monument was unveiled on 17 February 2008, the day that Kosovo formally declared its independence from Serbia. The monument consists of the English-language word \"Newborn\" in capital block letters, which were painted bright yellow when the sculpture was first revealed. The monument was later re-painted with the flags of the states that have recognised Kosovo. At the unveiling of the monument it was announced that it will be painted differently on the anniversary of Kosovo\'s independence movement day every year. The monument attracted the attention of international media reporting Kosovo\'s movement declaration of independence, and it was featured prominently on the front page of The New York Times.</string>
    <string name="open_in_maps">open in maps</string>
    <string name="read_text">Read Text</string>
    <string name="newborn1">newborn1</string>
    <string name="mother_teresa_cathedral">Mother Teresa Cathedral</string>
    <string name="the_cathedral_of_saint_mother_teresa_in_pristina_is_a_roman_catholic_cathedral_being_constructed_in_pristina_kosovo_in_2007_the_government_of_kosovo_approved_plans_for_the_building_the_cathedral_is_dedicated_to_the_albanian_roman_catholic_nun_and_missionary_saint_teresa_of_calcutta">The Cathedral of Saint Mother Teresa in Pristina is a Roman Catholic cathedral being constructed in Pristina, Kosovo. In 2007, the Government of Kosovo approved plans for the building. The cathedral is dedicated to the Albanian Roman Catholic nun and missionary, Saint Teresa of Calcutta .</string>
    <string name="cathedral_dedicated_to_a_modern_saint">Cathedral dedicated to a modern saint</string>
    <string name="katedralja">katedralja</string>
    <string name="open_in_maps1">Open in maps</string>
    <string name="the_national_library_of_kosovo_pjet_r_bogdani">The National Library of Kosovo Pjetër Bogdani</string>
    <string name="the_national_library_of_kosovo_is_the_highest_library_institution_in_kosovo_established_by_the_assembly_and_is_located_in_pristina_the_mission_of_the_library_is_to_collect_preserve_promote_and_make_accessible_the_documentary_and_intellectual_heritage_of_kosovo_it_holds_exhibitions_and_holds_an_archive_of_national_newspapers_the_library_also_provides_a_number_of_other_services_it_is_known_for_its_unique_history_and_the_style_of_the_building_designed_by_croatian_architect_andrija_mutnjakovi_followed_by_controversies_about_the_outside_appearance_of_it">The National Library of Kosovo is the highest library institution in Kosovo established by the Assembly and is located in Pristina. The mission of the library is to collect, preserve, promote and make accessible the documentary and intellectual heritage of Kosovo. It holds exhibitions and holds an archive of national newspapers. The library also provides a number of other services. It is known for its unique history, and the style of the building designed by Croatian architect Andrija Mutnjaković, followed by controversies about the outside appearance of it.</string>
</resources>