<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mapsBtn"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:onClick="maps"
        android:text="@string/explore_with_google_maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Explore Prishtina's history with Google Maps"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapsBtn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_to_prishtina"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="221dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/newborn"
        app:layout_constraintBottom_toTopOf="@+id/newbornDescText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/newborn" />

    <Button
        android:id="@+id/button5"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        android:onClick="goToLibrary"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/reviewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbornDescText"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/reviewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbornDescText"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        android:onClick="goToGermia"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/reviewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbornDescText"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/newbornDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="448dp"
        android:text="@string/modern_sculpture_with_political_meaning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reviewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="review"
        android:text="@string/live_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <Button
        android:id="@+id/button3"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        android:onClick="goToCathedral"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/reviewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbornDescText"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="49dp"
        android:layout_height="64dp"
        android:layout_marginBottom="28dp"
        android:onClick="goToNewborn"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/reviewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbornDescText"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/reviewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Live review with the locals"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/reviewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbornDescText"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/reviewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbornDescText"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newborn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

</androidx.constraintlayout.widget.ConstraintLayout>