<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Library">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="357dp"
        android:layout_height="77dp"
        android:text="@string/the_national_library_of_kosovo_pjet_r_bogdani"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="391dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cathedralTextView"
                android:layout_width="match_parent"
                android:layout_height="509dp"
                android:text="@string/the_national_library_of_kosovo_is_the_highest_library_institution_in_kosovo_established_by_the_assembly_and_is_located_in_pristina_the_mission_of_the_library_is_to_collect_preserve_promote_and_make_accessible_the_documentary_and_intellectual_heritage_of_kosovo_it_holds_exhibitions_and_holds_an_archive_of_national_newspapers_the_library_also_provides_a_number_of_other_services_it_is_known_for_its_unique_history_and_the_style_of_the_building_designed_by_croatian_architect_andrija_mutnjakovi_followed_by_controversies_about_the_outside_appearance_of_it"
                android:textAlignment="viewStart"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button13"
        android:layout_width="124dp"
        android:layout_height="46dp"
        android:layout_marginBottom="20dp"
        android:onClick="readText"
        android:text="@string/read_text"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:onClick="maps"
        android:text="open in Maps"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Brutalist Architecture "
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.125" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="372dp"
        android:layout_height="250dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/nationallibrary" />

</androidx.constraintlayout.widget.ConstraintLayout>